[package]
name = "plugin-lua-telegram"
version = "0.1.0"
edition = "2021"

[lib]
name = "_telegram_0_1_0"
crate-type = ["cdylib"]

[dependencies]
cygnixy-plugin-interface = { version = "0.1" }
mlua = { version = "0.10", features = [
    "luau",
    "vendored",
    "serialize",
    "error-send",
] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
